<resources>
    <string name="app_name">Login-SignUp-Firebase</string>
    <string name="just_image">just Image</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="just_text">Just Text</string>
    <string name="ellipse">Ellipse</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="default_web_client_id">738589465316-mb300tbhkigcj9e9nr0aj5fq88tvnnlr.apps.googleusercontent.com</string>
    <string name="image">Image</string>
    <string name="image1">Image01</string>
    <string name="image2">image2</string>
    <string name="image3">Image3</string>
    <string name="sign_out">Sign Out</string>
    <string name="welcome">Welcome</string>
    <string name="take_notes">Take Notes</string>
    <string name="take_your_notes_here">Take Your Notes Here</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save_notes">Save Notes</string>
    <string name="note_display">Note Display</string>
    <string name="x">❌</string>
    <string name="title1">Title!</string>
    <string name="desc">Description!</string>
</resources>