<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".NotesScreen">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_your_notes_here"
        android:textAllCaps="false"
        android:textColor="#C51162"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:autofillHints="title"
                android:ems="10"
                android:hint="@string/title"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:autofillHints="description"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/just_image"
            app:srcCompat="@drawable/baseline_add_circle_outline_24" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/note_display"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:listitem="@layout/notes_rv_item" />

</androidx.constraintlayout.widget.ConstraintLayout>